tests-integration/fixtures/checking/1772565060_derive_functor_contravariant_error/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
Predicate :: forall (@a :: Type). ((a :: Type) -> Boolean) -> Predicate (a :: Type)
Reader ::
  forall (@r :: Type) (@a :: Type). ((r :: Type) -> (a :: Type)) -> Reader (r :: Type) (a :: Type)
Cont ::
  forall (@r :: Type) (@a :: Type).
    (((a :: Type) -> (r :: Type)) -> (r :: Type)) -> Cont (r :: Type) (a :: Type)

Types
Predicate :: Type -> Type
Reader :: Type -> Type -> Type
Cont :: Type -> Type -> Type

Derived
derive Functor Predicate
derive forall (t5 :: Type). Functor (Reader (t5 :: Type))
derive forall (t7 :: Type). Functor (Cont (t7 :: Type))

Roles
Predicate = [Representational]
Reader = [Representational, Representational]
Cont = [Representational, Representational]

Diagnostics
error[ContravariantOccurrence]: Type variable occurs in contravariant position: (t9 :: Type)
  --> 6:1..6:34
  |
6 | derive instance Functor Predicate
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
